made cards visible and correct size

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -9,3 +9,10 @@
     width: 25%;
     height: 300px;
 }
+
+.row {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+}
